# utils/swaggerApi.json
@@ -2,67 +2,48 @@
   "openapi": "3.0.1",
   "info": {
     "title": "test API",
-    "version": "v0.9"
+    "version": "v0.1"
   },
   "tags": [
     {
       "name": "Users API:",
-      "description": "main path - https://marajewerly-rest-api.yurgo.fun/ /// JUST _ EXAMPLE"
+      "description": "main path - https://yummy-rest-api.yurgo.fun/"
     }
   ],
   "paths": {
-    "/api/auth/register": {
-      "post": {
-        "summary": "NOT WORK - JUST EXAMPLE",
-        "tags": [
-          "Auth"
-        ],
-        "description": "name, email & password required. email must bu unique in User collection",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/User"
-              },
-              "example": {
-                "name": "newUser",
-                "email": "example@example.com",
-                "password": "hsy36djhwe93"
-              }
-            }
-          }
-        },
+    "/api/users": {
+      "get": {
+        "summary": "Get info of loginned user by token",
         "responses": {
-          "201": {
+          "200": {
             "description": "OK",
             "content": {
               "application/json": {
                 "schema": {
                   "type": "object",
                   "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "success"
+                    },
+                    "code": {
+                      "type": "number",
+                      "example": 201
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "fields update"
+                    },
                     "user": {
                       "type": "object",
                       "properties": {
-                        "id": {
-                          "type": "string",
-                          "example": "hs672ijnfy23hf3pi3uwkdj"
-                        },
                         "name": {
                           "type": "string",
-                          "example": "newUser"
+                          "example": "UserName"
                         },
                         "email": {
                           "type": "string",
                           "example": "example@example.com"
-                        },
-                        "avatar": {
-                          "type": "string",
-                          "example": "http://www.gravatar.com/avatar/0c308af859002f66858ebc205cce9825?s=100"
-                        },
-                        "token": {
-                          "type": "string",
-                          "example": "eyJhbGeiO6JIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0M2JiM2ZjZDgxNWZhNzcyYjU2N2M0ZSIsImlhdCI6MTY4MTY2ODYzNywiZXhwIjoxNjgxRjc1ODM3fQ.U2MKPZbgFvq_ASqX79dZBxOA7AbUncCQeH9M8ffohps"
                         }
                       }
                     }
@@ -71,8 +52,8 @@
               }
             }
           },
-          "409": {
-            "description": "Conflict",
+          "401": {
+            "description": "Unauthorized",
             "content": {
               "application/json": {
                 "schema": {
@@ -80,7 +61,74 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "email already used"
+                      "example": "Not authorized"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "patch": {
+        "summary": "Update existed user",
+        "description": "Update name and/or avatar",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              },
+              "example": {
+                "name": "newName",
+                "email": "Jimmy2updated@email.com"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "success"
+                    },
+                    "code": {
+                      "type": "number",
+                      "example": 201
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "fields update"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "updatedUser": {
+                          "type": "object"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Not authorized"
                     }
                   }
                 }
@@ -108,14 +156,6 @@
             "format": "binary"
           }
         }
-      }
-    },
-    "securitySchemes": {
-      "bearerAuth": {
-        "type": "http",
-        "description": "JWT Authorization header using the Bearer scheme.",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
       }
     }
   }
